		Removed nonsense error message when stopped on a signal.

	mbdiff:
		Removed nonsense error message when stopped on a signal.
		Improved error reporting when copy fails.

	mbindex:
		Removed nonsense error message when stopped on a signal.

	mbtask:
		Removed some debug logging.
		Creates the semafore is_inet when the internet connections is
		available, and removes it when it is down.
		Added test for ISDN/modem lines in use.
		Lots of code cleanup.
		No setup setting anymore for maximum POTS and ISDN lines, this
		is now automatic.
		mbtask will now update internal counters how many ISDN and POTS
		lines are free to use for dialout.
		For ISDN and POTS calls, mbtask now decides which tty to use,
		mbcico gets the tty to use as option on the commandline.
		Keeps track of the number of mailers running.
		Added default path for arealists.
		Keeps track of total mailer TCP/IP sessions and will not start
		new sessions if the limit from the setup is reached. This will
		hopefully prevent that mbcico will use too much bandwidth on
		TCP/IP trafic.
		Splitted no TCP settings in no IBN, no IFC and no ITN.
		Improved the ping tests, better errorlogging and suppresion of
		icmp replies that are not for mbtask. Better protected against
		flood pings. This should fixes the problem that the internet
		seemed down while it was available.

	mbcico:
		Fixed binkp driver to accept incoming unprotected sessions.
		If a binkp session comes in and there already is a session
		with that node, mbcico stopts the binkp session with an error.
		Remove some obsolete code that is handled by mbtask.
		Added some debug logmessages in ttyio.
		Added experimental support for binkp GET command frame, under
		test now, seems to work, although the offset request is not
		supported.
		Registers TCP/IP sessions with mbtask.
		All filetransfer times and cps rates are calculated in mSecs.
		Splitted no TCP settings in no IBN, no IFC and no ITN.